@@ -45,6 +45,7 @@ namespace bw {
 /* Interface for completors {{{ */
 
 /**
+ * @class Completor completion.h libbw/completion.h
  * @brief Interface for auto-completion
  *
  * This class represents an interface that one must implement to get
@@ -81,6 +82,7 @@ class Completor {
 /* Interface for a linereader {{{ */
 
 /**
+ * @class LineReader completion.h libbw/complection.h
  * @brief Interface for a line reader
  *
  * This class represents an interface for a line reader. A line reader is a
@@ -230,6 +232,7 @@ class LineReader {
 /* Abstract base class for line readers {{{ */
 
 /**
+ * @class AbstractLineReader completion.h libbw/completion.h
  * @brief Abstract base class for LineReader implementations
  *
  * This is a abstract base class for line reader implementations.
