@@ -2,6 +2,7 @@
 -----
  - Move everything into 'bw' namespace.
  - Use "git describe" to build the version hash.
+ - Change the documentation to include <libbw/header.h> instead of <header.h>.
 
 0.1.3
 -----
