@@ -3,6 +3,8 @@
 	* Doxygen fixes.
 	* Move everything into 'bw' namespace.
 	* Use "git describe" to build the version hash.
+	* Change the documentation to include <libbw/header.h> instead of
+	  <header.h>.
 
 2010-03-21  Bernhard Walle <bernhard@bwalle.de>
 
